# AITA

./: .replit  README.md  main.py  pyproject.toml  replit.nix
backend/: Dockerfile  railway.toml
backend/app/: main.py
backend_old/: .gitignore  requirements.txt
backend_old/app/: main.py  models.py
backend_old/app/services/: groq_service.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/Components/: CommandHelp.jsx  Terminal.jsx  Terminal2.jsx
frontend/src/services/: api.js
